# MOSAIC-Server

./: .env  .env.prod  .gitignore  LICENSE  README.md  bun.lockb  openapi.json  package-lock.json  package.json
backend/: Dockerfile  build.gradle  openapi.yaml  pyproject.toml
backend/app/: crud.py  main.py
deploy/local/: docker-compose.backend.yaml
deploy/prod/: .env  docker-compose.backend.yaml  docker-compose.frontend.yaml
diagram/: classDiagram.puml  dashboard_config_example.json  dashboard_config_old_example.json  robot_config_example.json  sequence_dashboard_init_render.puml  sequence_data_receive.puml  sequence_data_transmit.puml  sequence_robot_connection.puml  sequence_widget_add.puml  sequence_widget_delete.puml
docs/: DATACHANNEL.md  DATACHANNEL_SETUP.md  DEPLOYMENT.md  LOGIN_FLOW.md  MEDIASTREAM.md  MEDIASTREAM_SETUP.md  ROBOT_STATUS_FLOW.md  VIDEO_STORE_SETUP.md
frontend/: .env  DATACHANNEL_SETUP.md  Dockerfile  biome.json  index.html  package 2.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-legacy/: README.md
frontend-legacy/src/: routeTree.gen.ts
frontend-legacy/tests/: robot-control.tsx
frontend/src/: App.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/tests/: RobotControl.tsx  robots.tsx  user-settings.spec.ts
p2p-video-calling-app/public/: index.html
server/: .env
server/frontend/: package-lock.json  package.json
test/multi-turtlesim/: gunicorn.conf.py  gunicorn.local.conf.py  pyproject.toml  server.py  server_start.sh  server_stop.sh
test/multi-turtlesim/static/public/: index.css  index.html  index.js  robot_control.js  visualize_position.js  visualize_quaternion.js
test/p2p-video-calling-app/: README.md  gunicorn.conf.py  gunicorn.local.conf.py  pyproject.toml  server.py  server_stop.sh  uwsgi.ini
test/p2p-webcam-app/: README.md  local_webcam.py  pyproject.toml  webcam_video_track.py  webrtc_client.py
test/remote-control/: README.md  pyproject.toml  server.py
test/remote_control/: README.md
test/turtlesim-remote-control/: README.md  (+4 more)
turtle_server/: server.py
(+506 files in other folders)
