[tool.poetry]
name = "multi-turtlesim"
version = "0.1.0"
description = ""
authors = ["YeonhyukKim <brankein13@gm.gist.ac.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.1"
aiosignal = "^1.2.0"
anyio = "^3.5.0"
asgiref = "^3.5.0"
async-timeout = "^4.0.2"
attrs = "^21.4.0"
bidict = "^0.22.0"
black = "^22.3.0"
charset-normalizer = "^2.0.12"
click = "^8.1.3"
colorama = "^0.4.4"
fastapi = "^0.75.2"
frozenlist = "^1.3.0"
h11 = "^0.13.0"
httptools = "^0.6.4"
idna = "^3.3"
loguru = "^0.6.0"
multidict = "^6.0.2"
mypy-extensions = "^0.4.3"
pathspec = "^0.9.0"
platformdirs = "^2.5.2"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
fastapi-socketio = "^0.0.9"
uvicorn = "^0.17.6"
python-engineio = "^4.3.2"
python-socketio = "^5.13.0"
websockets = "^10.3"
PyYAML = "^6.0"
six = "^1.16.0"
sniffio = "^1.2.0"
starlette = "^0.17.1"
tomli = "^2.0.1"
watchgod = "^0.8.2"
win32-setctime = "^1.1.0"
yarl = "^1.7.2"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"