[tool.poetry]
name = "remote-control"
version = "0.1.0"
description = ""
authors = ["YeonhyukKim <brankein13@gm.gist.ac.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = "^0.34.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"